# cugraph-gnn

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  build.sh  dependencies.yaml  pyproject.toml  pytest.ini
.github/: CODEOWNERS
.github/workflows/: build.yaml  pr.yaml  sync-public-fork.yml  test.yaml
ci/: build_cpp.sh  build_python.sh  build_python_noarch.sh  build_python_wholegraph-torch.sh  build_wheel.sh  build_wheel_cugraph-pyg.sh  build_wheel_libwholegraph.sh  build_wheel_pylibwholegraph.sh  build_wheel_wholegraph-torch.sh  run_ctests.sh  run_cugraph_pyg_pytests.sh  run_pylibwholegraph_pytests.sh  run_wholegraph_torch_pytests.sh  test_cpp.sh  test_python.sh  test_wheel.sh  test_wheel_cugraph-pyg.sh  test_wheel_pylibwholegraph.sh  test_wheel_wholegraph-torch.sh  validate_wheel.sh
ci/release/: update-version.sh
cmake/: python_package_prefixes.cmake
cpp/: .clang-tidy  CMakeLists.txt  Doxyfile
cpp/bench/: CMakeLists.txt
cpp/bench/common/: wholegraph_benchmark.cpp  wholegraph_benchmark.hpp
cpp/bench/wholegraph_tensor_ops/: gather_scatter_bench.cu
cpp/docs/: DEVELOPER_GUIDE.md
cpp/doxygen/: main_page.md
cpp/include/wholegraph/: device_reference.cuh  embedding.h  env_func_ptrs.h  global_reference.h  graph_op.h  tensor_description.h  wholegraph.h  wholegraph_op.h  wholegraph_tensor.h  wholegraph_tensor_op.h
cpp/scripts/: run-cmake-format.sh
cpp/src/: cuda_macros.cpp  cuda_macros.hpp  error.hpp  logger.cpp  logger.hpp  net_utils.cpp  parallel_utils.cpp  parallel_utils.hpp
cpp/src/graph_ops/: append_unique.cpp  append_unique_func.cuh  append_unique_impl.cu  append_unique_impl.h  csr_add_self_loop.cpp  csr_add_self_loop_func.cuh  csr_add_self_loop_impl.cu  csr_add_self_loop_impl.h
cpp/src/wholegraph/: communicator.cpp  communicator.hpp  embedding.cpp  embedding.hpp  embedding_cache.cpp  embedding_cache.hpp  embedding_optimizer.cpp  embedding_optimizer.hpp  env_func_ptrs.cpp  env_func_ptrs.hpp  file_io.cpp  file_io.h  global_reference.cpp  initialize.cpp  initialize.hpp  integer_utils.hpp  memory_handle.cpp  memory_handle.hpp  nccl_comms.cpp  nccl_comms.hpp  system_info.cpp  system_info.hpp  tensor_description.cpp  wholegraph.cpp  wholegraph_tensor.cpp
cpp/src/wholegraph_ops/: raft_random_gen.cu  sample_comm.cuh  unweighted_sample_without_replacement.cpp  unweighted_sample_without_replacement_func.cuh  unweighted_sample_without_replacement_impl.h  unweighted_sample_without_replacement_impl_mapped.cu  unweighted_sample_without_replacement_impl_nccl.cu  unweighted_sample_without_replacement_nccl_func.cuh  weighted_sample_without_replacement.cpp  weighted_sample_without_replacement_func.cuh  weighted_sample_without_replacement_impl.h  weighted_sample_without_replacement_impl_mapped.cu
cpp/src/wholegraph_tensor_ops/: gather_op.cpp  gather_op_impl.h  gather_op_impl_mapped.cu  gather_op_impl_nccl.cu  output_memory_handle.hpp  register.hpp  scatter_op.cpp  scatter_op_impl.h  scatter_op_impl_mapped.cu  scatter_op_impl_nccl.cu  temp_memory_handle.hpp  thrust_allocator.cpp  thrust_allocator.hpp  wholegraph_test_op.cu
cpp/src/wholegraph_tensor_ops/functions/: bucket_ids_func.cu  bucket_ids_func.h  embedding_cache_func.cu  embedding_cache_func.cuh  embedding_cache_func.h  embedding_optimizer_func.cu  embedding_optimizer_func.h  exchange_embeddings_nccl_func.cu  exchange_embeddings_nccl_func.h  exchange_ids_nccl_func.cu  exchange_ids_nccl_func.h  gather_cached_func.cu  gather_cached_func.h  gather_func.cu  gather_func_impl.cuh  gather_func_impl_floating_data_int32_indices.cu  gather_func_impl_floating_data_int64_indices.cu  gather_func_impl_integer_data_int32_indices.cu  gather_func_impl_integer_data_int64_indices.cu  gather_scatter_func.cuh  gather_scatter_func.h  map_indices_func.cu  map_indices_func.h  scatter_func.cu  scatter_func_impl_floating_data_int32_indices.cu  scatter_func_impl_floating_data_int64_indices.cu  scatter_func_impl_integer_data_int32_indices.cu  scatter_func_impl_integer_data_int64_indices.cu  sort_indices_func.cu  sort_indices_func.h  sort_unique_indices_func.cu  sort_unique_indices_func.h
cpp/tests/: CMakeLists.txt  parallel_utils_tests.cpp
cpp/tests/graph_ops/: append_unique_test_utils.cu  append_unique_test_utils.hpp  append_unique_tests.cu  csr_add_self_loop_tests.cu  csr_add_self_loop_utils.cu  csr_add_self_loop_utils.hpp
cpp/tests/wholegraph/: wholegraph_comm_tests.cpp  wholegraph_handle_tests.cpp  wholegraph_tensor_tests.cpp  wholegraph_test_utils.hpp
cpp/tests/wholegraph_ops/: graph_sampling_test_utils.cu  graph_sampling_test_utils.hpp  wholegraph_csr_unweighted_sample_without_replacement_tests.cu  wholegraph_csr_weighted_sample_without_replacement_tests.cu
cpp/tests/wholegraph_tensor_ops/: cacheset_tests.cu  embedding_test_utils.cu  embedding_test_utils.hpp  wholegraph_embedding_gradient_apply_tests.cu  wholegraph_embedding_tests.cu  wholegraph_gather_tests.cu  wholegraph_scatter_tests.cu
python/pylibwholegraph/: CMakeLists.txt  README.md  pyproject.toml
python/pylibwholegraph/src/pylibwholegraph/: _doctor_check.py
python/pylibwholegraph/src/pylibwholegraph/binding/: CMakeLists.txt  binding_utils.cpp  binding_utils.hpp  communicator_binding.cpp  communicator_binding.hpp  embedding_binding.cpp  embedding_binding.hpp  global_context_binding.cpp  global_context_binding.hpp  operations_binding.cpp  registrations.cpp  tensor_binding.cpp  tensor_binding.hpp  wholegraph_binding.cpp  wholegraph_binding.hpp  wholegraph_binding.pyi  wholememory_binding.py
python/pylibwholegraph/src/pylibwholegraph/torch/: __init__.py  _compat.py  comm.py  common_options.py  data_loader.py  distributed_launch.py  distributed_matrix.py  distributed_tensor.py  distributed_tensor_utils.py  dlpack_utils.py  embedding.py  gnn_model.py  graph_ops.py  graph_structure.py  initialize.py  storage_backend.py  tensor.py  utils.py  wholegraph_env.py  wholegraph_ops.py  wholememory_ops.py
python/pylibwholegraph/tests/: test_global_context_wrapper.py  test_tensor_description.py
readme_pages/: CONTRIBUTING.md  build_test_package.md
(+85 files in other folders)
